applying FindBugs recommendations on profiler libs